PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/FunctionDefinedMultipleTimes.pf
module FunctionDefinedMultipleTimes {

    fun getInt(i Int) : Int {
        return i
    }

    fun getInt(a Int) : Int {
        return a
    }

    fun testSomething() : Int {
        i Int = 2
        i = getInt(i)
         
        return i
    }
}